Prevent zoom on mobile

--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-
+* {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  touch-action: manipulation;
+}
 
 /* Coded Research Club - Update 04.24 */
 
